--- a/samples/style-explorer/index.html
+++ b/samples/style-explorer/index.html
@@ -14,13 +14,13 @@
   <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"-->
 
   <!-- Calcite Maps Bootstrap -->
-  <link rel="stylesheet" href="../../dist/css/calcite-maps-bootstrap-v0.8.css">
+  <link rel="stylesheet" href="../../dist/css/calcite-maps-bootstrap-v0.10.css">
 
   <!-- Calcite Maps -->
-  <link rel="stylesheet" href="../../dist/css/calcite-maps-arcgis-4.x.min-v0.8.css">
+  <link rel="stylesheet" href="../../dist/css/calcite-maps-arcgis-4.x.min-v0.10.css">
   
   <!-- ArcGIS JS 4.x -->
-  <link rel="stylesheet" href="https://jsdev.arcgis.com/4.8/esri/css/main.css">
+  <link rel="stylesheet" href="https://js.arcgis.com/4.10/esri/css/main.css">
   <!--link rel="stylesheet" href="../../dist/css/arcgis/themes/light/main.css"-->
 
   <style>
@@ -116,7 +116,7 @@
 
   <!-- Navbar -->
 
-  <nav class="navbar navbar-fixed-top calcite-navbar calcite-bg-custom calcite-text-light" style="background-color: rgb(76, 76, 76);">
+  <nav class="navbar navbar-fixed-top calcite-navbar calcite-bg-dark calcite-text-light">
      <!-- Menu -->
     <div class="dropdown calcite-dropdown calcite-bg-light calcite-text-dark" role="presentation">
       <!--a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"-->
@@ -155,7 +155,7 @@
     <ul class="calcite-nav nav navbar-nav">                    
       <li class="active"><a id="mapNav" class="hidden-xs hidden-sm" href="#mapTab" aria-controls="mapTab" aria-expanded="true" role="tab" data-toggle="tab" data-tooltip="tip" title="2D View" data-placement="bottom">Map</a></li>
       <li><a id="sceneNav" class="hidden-xs hidden-sm" href="#sceneTab" aria-controls="sceneTab" role="tab" data-toggle="tab" data-tooltip="tip" title="3D View" data-placement="bottom">Scene</a></li>   
-      <li><div class="calcite-navbar-search calcite-search-expander" tabindex="-1"><div id="searchNavDiv" tabindex="0"></div></div></li>
+      <li><div class="calcite-navbar-search calcite-search-expander"><div id="searchNavDiv"></div></div></li>
     </ul>
   </nav><!--/.navbar -->
 
@@ -203,7 +203,7 @@
 
   <!-- Panel Container -->
   
-  <div class="calcite-panels calcite-panels-right calcite-bg-custom calcite-text-light panel-group" role="tablist" aria-multiselectable="true" style="background-color: rgb(76, 76, 76);">
+  <div class="calcite-panels calcite-panels-right calcite-bg-dark calcite-text-light panel-group" role="tablist" aria-multiselectable="true">
     
     <!-- Panel - Info -->
 
@@ -836,7 +836,7 @@
   </script>
 
   <!-- ArcGIS JS 4.x -->
-  <script src="https://jsdev.arcgis.com/4.8/"></script>
+  <script src="https://js.arcgis.com/4.10/"></script>
 
   <script>
     
@@ -862,8 +862,8 @@
       "dojo/on",
 
       // Calcite Maps
-      "calcite-maps/calcitemaps-v0.8",
-      "calcite-maps/calcitemaps-arcgis-support-v0.8",
+      "calcite-maps/calcitemaps-v0.10",
+      "calcite-maps/calcitemaps-arcgis-support-v0.10",
       //"calcite-maps/calcitemaps",
       "calcite-settings/panelsettings",
 
@@ -1141,7 +1141,7 @@
               view: app.activeView,
               showPopupOnSelect: showPopup,
               highlightEnabled: false,
-              maxSuggestions: 4
+              maxSuggestions: 20
             },
             }, parentId);
           return search;
