fix: Als_v0.8_js_4.9 (#3)
* Simplified css for custom colors and backgrounds

* Only apply dark bg to select widgets not in panels

* Fix panel closing issue

* Build v0.9

* Update samples

* Updated version to v0.9

Co-authored-by: Allan Laframboise <alaframboise@esri.com>

--- a/samples/index.html
+++ b/samples/index.html
@@ -11,12 +11,20 @@
   <title>Calcite Maps</title>
 
   <!-- Calcite Maps Bootstrap -->
+  <<<<<<< als-v0.8-js-4.9
+  <link rel="stylesheet" href="../dist/css/calcite-maps-bootstrap-v0.9.css">
+  =======
   <link rel="stylesheet" href="../dist/css/calcite-maps-bootstrap-v0.10.css">
+  >>>>>>> als-v0.8-js-4.8
 
   <!-- Calcite (icons) -->
   <link rel="stylesheet" href="../dist/fonts/calcite/calcite-ui.css">
 
+  <<<<<<< als-v0.8-js-4.9
+  <link rel="stylesheet" href="../dist/css/calcite-maps-v0.9.css">
+  =======
   <link rel="stylesheet" href="../dist/css/calcite-maps-v0.10.css">
+  >>>>>>> als-v0.8-js-4.8
 
   <style>
 
