--- a/samples/arcgis-3.x/arcgis-3.x.html
+++ b/samples/arcgis-3.x/arcgis-3.x.html
@@ -10,10 +10,17 @@
   <title>Calcite Maps - ArcGIS Sample</title>
 
   <!-- Calcite Maps Bootstrap -->
+  <<<<<<< als-v0.8-js-4.9
+  <link rel="stylesheet" href="../../dist/css/calcite-maps-bootstrap.min-v0.9.css">
+
+  <!-- Calcite Maps -->
+  <link rel="stylesheet" href="../../dist/css/calcite-maps-arcgis-3.x.min-v0.9.css"-->
+  =======
   <link rel="stylesheet" href="../../dist/css/calcite-maps-bootstrap.min-v0.10.css">
 
   <!-- Calcite Maps -->
   <link rel="stylesheet" href="../../dist/css/calcite-maps-arcgis-3.x.min-v0.10.css"-->
+  >>>>>>> als-v0.8-js-4.8
 
   <!-- ArcGIS JS 3.x -->
   <link rel="stylesheet" href="https://js.arcgis.com/3.27/esri/themes/calcite/dijit/calcite.css">
@@ -174,7 +181,11 @@
           "dojo/query",
 
           // Calcite Maps
+  <<<<<<< als-v0.8-js-4.9
+          "calcite-maps/calcitemaps-v0.9",
+  =======
           "calcite-maps/calcitemaps-v0.10",
+  >>>>>>> als-v0.8-js-4.8
           
           // Bootstrap
           "bootstrap/Collapse", 
