--- a/samples/esri-leaflet/esri-leaflet.html
+++ b/samples/esri-leaflet/esri-leaflet.html
@@ -11,10 +11,17 @@
   <title>Calcite Maps - Esri-Leaflet</title>
 
   <!-- Calcite Maps Bootstrap -->
+  <<<<<<< als-v0.8-js-4.9
+  <link rel="stylesheet" href="../../dist/css/calcite-maps-bootstrap.min-v0.9.css">
+
+  <!-- Calcite Maps -->
+  <link rel="stylesheet" href="../../dist/css/calcite-maps-esri-leaflet.min-v0.9.css">
+  =======
   <link rel="stylesheet" href="../../dist/css/calcite-maps-bootstrap.min-v0.10.css">
 
   <!-- Calcite Maps -->
   <link rel="stylesheet" href="../../dist/css/calcite-maps-esri-leaflet.min-v0.10.css">
+  >>>>>>> als-v0.8-js-4.8
   <link rel="stylesheet" href="../../dist/fonts/calcite/calcite-ui.css">
 
   <!-- Load Leaflet from CDN-->
@@ -300,7 +307,11 @@
   
   <!--script src="https://esri.github.io/calcite-bootstrap/scripts/vendor.js"></script-->
   <!--script src="https://esri.github.io/calcite-bootstrap/scripts/plugins.js"></script-->
+  <<<<<<< als-v0.8-js-4.9
+  <script src="../../dist/js/jquery/calcitemaps-v0.9.js"></script>
+  =======
   <script src="../../dist/js/jquery/calcitemaps-v0.10.js"></script>
+  >>>>>>> als-v0.8-js-4.8
 
 </body>
 </html>
