--- a/samples/arcgis-3.x/arcgis-3.x.html
+++ b/samples/arcgis-3.x/arcgis-3.x.html
@@ -10,6 +10,12 @@
   <title>Calcite Maps - ArcGIS Sample</title>
 
   <!-- Calcite Maps Bootstrap -->
+  <<<<<<< dependabot/npm_and_yarn/node-sass-4.14.1
+  <link rel="stylesheet" href="../../dist/css/calcite-maps-bootstrap.min-v0.10.css">
+
+  <!-- Calcite Maps -->
+  <link rel="stylesheet" href="../../dist/css/calcite-maps-arcgis-3.x.min-v0.10.css"-->
+  =======
   <<<<<<< als-v0.8-js-4.9
   <link rel="stylesheet" href="../../dist/css/calcite-maps-bootstrap.min-v0.9.css">
 
@@ -20,6 +26,7 @@
 
   <!-- Calcite Maps -->
   <link rel="stylesheet" href="../../dist/css/calcite-maps-arcgis-3.x.min-v0.10.css"-->
+  >>>>>>> als-v0.8-js-4.8
   >>>>>>> als-v0.8-js-4.8
 
   <!-- ArcGIS JS 3.x -->
@@ -181,10 +188,14 @@
           "dojo/query",
 
           // Calcite Maps
+  <<<<<<< dependabot/npm_and_yarn/node-sass-4.14.1
+          "calcite-maps/calcitemaps-v0.10",
+  =======
   <<<<<<< als-v0.8-js-4.9
           "calcite-maps/calcitemaps-v0.9",
   =======
           "calcite-maps/calcitemaps-v0.10",
+  >>>>>>> als-v0.8-js-4.8
   >>>>>>> als-v0.8-js-4.8
           
           // Bootstrap
