--- a/samples/arcgis-4.x/arcgis-4.x-2d-3d-jQuery.html
+++ b/samples/arcgis-4.x/arcgis-4.x-2d-3d-jQuery.html
@@ -9,6 +9,15 @@
   <title>Calcite Maps - ArcGIS 4.x 2D - 3D (jQuery)</title>
 
   <!-- Calcite Maps Bootstrap -->
+  <<<<<<< dependabot/npm_and_yarn/node-sass-4.14.1
+  <link rel="stylesheet" href="../../dist/css/calcite-maps-bootstrap.min-v0.10.css">
+
+  <!-- Calcite Maps -->
+  <link rel="stylesheet" href="../../dist/css/calcite-maps-arcgis-4.x.min-v0.10.css">
+
+  <!-- ArcGIS JS 4 -->
+  <link rel="stylesheet" href="https://js.arcgis.com/4.10/esri/css/main.css">
+  =======
   <<<<<<< als-v0.8-js-4.9
   <link rel="stylesheet" href="../../dist/css/calcite-maps-bootstrap.min-v0.9.css">
 
@@ -25,6 +34,7 @@
 
   <!-- ArcGIS JS 4 -->
   <link rel="stylesheet" href="https://js.arcgis.com/4.10/esri/css/main.css">
+  >>>>>>> als-v0.8-js-4.8
   >>>>>>> als-v0.8-js-4.8
 
   <style>
@@ -150,10 +160,14 @@
   </div> <!-- /.calcite-panels -->
 
   <!-- ArcGIS JS 4 -->
+  <<<<<<< dependabot/npm_and_yarn/node-sass-4.14.1
+  <script src="https://js.arcgis.com/4.10/"></script>
+  =======
   <<<<<<< als-v0.8-js-4.9
   <script src="https://js.arcgis.com/4.9/"></script>
   =======
   <script src="https://js.arcgis.com/4.10/"></script>
+  >>>>>>> als-v0.8-js-4.8
   >>>>>>> als-v0.8-js-4.8
 
   <script>
@@ -375,10 +389,14 @@
   <!--script src="../../assets/js/ie10-viewport-bug-workaround.js"></script-->
 
   <!-- Calcite Maps -->
+  <<<<<<< dependabot/npm_and_yarn/node-sass-4.14.1
+  <script src="../../dist/js/jquery/calcitemaps-v0.10.js"></script>
+  =======
   <<<<<<< als-v0.8-js-4.9
   <script src="../../dist/js/jquery/calcitemaps-v0.9.js"></script>
   =======
   <script src="../../dist/js/jquery/calcitemaps-v0.10.js"></script>
+  >>>>>>> als-v0.8-js-4.8
   >>>>>>> als-v0.8-js-4.8
 
 </body>
