--- a/samples/arcgis-4.x/arcgis-4.x-example.html
+++ b/samples/arcgis-4.x/arcgis-4.x-example.html
@@ -8,6 +8,17 @@
   <title>ArcGIS JS v4, Calcite Maps and Bootstrap Example</title>
 
   <!-- Calcite Maps Bootstrap -->
+  <<<<<<< dependabot/npm_and_yarn/node-sass-4.14.1
+  <link rel="stylesheet" href="https://esri.github.io/calcite-maps/dist/css/calcite-maps-bootstrap.min-v0.10.css">
+  <!--link rel="stylesheet" href="http://localhost/GitHub/calcite-maps/dist/css/calcite-maps-bootstrap.min-v0.10.css"-->
+  
+  <!-- Calcite Maps -->
+  <link rel="stylesheet" href="https://esri.github.io/calcite-maps/dist/css/calcite-maps-arcgis-4.x.min-v0.10.css">
+  <!--link rel="stylesheet" href="http://localhost/GitHub/calcite-maps/dist/css/calcite-maps-arcgis-4.x.min-v0.10.css"-->
+
+  <!-- ArcGIS JS 4 -->
+  <link rel="stylesheet" href="https://js.arcgis.com/4.10/esri/css/main.css">
+  =======
   <<<<<<< als-v0.8-js-4.9
   <link rel="stylesheet" href="https://esri.github.io/calcite-maps/dist/css/calcite-maps-bootstrap.min-v0.9.css">
   <!--link rel="stylesheet" href="http://localhost/GitHub/calcite-maps/dist/css/calcite-maps-bootstrap.min-v0.9.css"-->
@@ -28,6 +39,7 @@
 
   <!-- ArcGIS JS 4 -->
   <link rel="stylesheet" href="https://js.arcgis.com/4.10/esri/css/main.css">
+  >>>>>>> als-v0.8-js-4.8
   >>>>>>> als-v0.8-js-4.8
 
   <style>
@@ -144,10 +156,14 @@
   </script>
 
   <!-- ArcGIS JS 4 -->
+  <<<<<<< dependabot/npm_and_yarn/node-sass-4.14.1
+  <script src="https://js.arcgis.com/4.10/"></script>
+  =======
   <<<<<<< als-v0.8-js-4.9
   <script src="https://js.arcgis.com/4.9/"></script>
   =======
   <script src="https://js.arcgis.com/4.10/"></script>
+  >>>>>>> als-v0.8-js-4.8
   >>>>>>> als-v0.8-js-4.8
 
   <script>
@@ -172,16 +188,22 @@
       "bootstrap/Dropdown",
 
       // Calcite Maps
+  <<<<<<< dependabot/npm_and_yarn/node-sass-4.14.1
+  =======
   <<<<<<< als-v0.8-js-4.9
       "calcite-maps/calcitemaps-v0.9",
       
       // Calcite Maps ArcGIS Support
       "calcite-maps/calcitemaps-arcgis-support-v0.9",
   =======
+  >>>>>>> als-v0.8-js-4.8
       "calcite-maps/calcitemaps-v0.10",
       
       // Calcite Maps ArcGIS Support
       "calcite-maps/calcitemaps-arcgis-support-v0.10",
+  <<<<<<< dependabot/npm_and_yarn/node-sass-4.14.1
+  =======
+  >>>>>>> als-v0.8-js-4.8
   >>>>>>> als-v0.8-js-4.8
 
       "dojo/domReady!"
