--- a/samples/style-explorer/index.html
+++ b/samples/style-explorer/index.html
@@ -14,6 +14,15 @@
   <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"-->
 
   <!-- Calcite Maps Bootstrap -->
+  <<<<<<< dependabot/npm_and_yarn/node-sass-4.14.1
+  <link rel="stylesheet" href="../../dist/css/calcite-maps-bootstrap-v0.10.css">
+
+  <!-- Calcite Maps -->
+  <link rel="stylesheet" href="../../dist/css/calcite-maps-arcgis-4.x.min-v0.10.css">
+  
+  <!-- ArcGIS JS 4.x -->
+  <link rel="stylesheet" href="https://js.arcgis.com/4.10/esri/css/main.css">
+  =======
   <<<<<<< als-v0.8-js-4.9
   <link rel="stylesheet" href="../../dist/css/calcite-maps-bootstrap-v0.9.css">
 
@@ -30,6 +39,7 @@
   
   <!-- ArcGIS JS 4.x -->
   <link rel="stylesheet" href="https://js.arcgis.com/4.10/esri/css/main.css">
+  >>>>>>> als-v0.8-js-4.8
   >>>>>>> als-v0.8-js-4.8
   <!--link rel="stylesheet" href="../../dist/css/arcgis/themes/light/main.css"-->
 
@@ -846,10 +856,14 @@
   </script>
 
   <!-- ArcGIS JS 4.x -->
+  <<<<<<< dependabot/npm_and_yarn/node-sass-4.14.1
+  <script src="https://js.arcgis.com/4.10/"></script>
+  =======
   <<<<<<< als-v0.8-js-4.9
   <script src="https://js.arcgis.com/4.9/"></script>
   =======
   <script src="https://js.arcgis.com/4.10/"></script>
+  >>>>>>> als-v0.8-js-4.8
   >>>>>>> als-v0.8-js-4.8
 
   <script>
@@ -876,12 +890,17 @@
       "dojo/on",
 
       // Calcite Maps
+  <<<<<<< dependabot/npm_and_yarn/node-sass-4.14.1
+      "calcite-maps/calcitemaps-v0.10",
+      "calcite-maps/calcitemaps-arcgis-support-v0.10",
+  =======
   <<<<<<< als-v0.8-js-4.9
       "calcite-maps/calcitemaps-v0.9",
       "calcite-maps/calcitemaps-arcgis-support-v0.9",
   =======
       "calcite-maps/calcitemaps-v0.10",
       "calcite-maps/calcitemaps-arcgis-support-v0.10",
+  >>>>>>> als-v0.8-js-4.8
   >>>>>>> als-v0.8-js-4.8
       //"calcite-maps/calcitemaps",
       "calcite-settings/panelsettings",
